--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html lang="en">
+<head>
+
+</head>
 <body>
-Hello
+	<canvas style="border:1px black solid" id="canvas"></canvas>
+	<script src="drawing.js"></script>
 </body>
