--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 </head>
 <body>
-	<canvas style="border:1px black solid" id="canvas"></canvas>
+	<canvas style="border:0px black solid;float:left" id="canvas"></canvas>
+	<canvas style="border:0px black solid;float:left" id="colors"></canvas>
 	<script src="drawing.js"></script>
 </body>
