--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 
 </head>
 <body>
-	<canvas style="border:0px black solid;float:left" id="canvas"></canvas>
-	<canvas style="border:0px black solid;float:left" id="colors"></canvas>
+	<img id='color_wheel' src="color_wheel.png" style="display:none"/>
+	<canvas style="border:1px black solid;float:left;" id="canvas"></canvas>
+	<canvas style="border:1px black solid;float:left" id="colors"></canvas>
+	<button id="new_frame">new F</button>
+	<button id="last_frame">last F</button>
+	<button id="next_frame">next F</button>
+	
 	<script src="drawing.js"></script>
 </body>
