--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<button id="new_frame">new F</button>
 	<button id="last_frame">last F</button>
 	<button id="next_frame">next F</button>
-	
+	<input id="target" type="text"></input>
 	<script src="drawing.js"></script>
 </body>
