switched to socketio

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-	<img id='color_wheel' src="color_wheel.png" style="display:none"/>
+	<script src="/socket.io/socket.io.js"></script>
 	<canvas style="border:1px black solid;float:left;" id="canvas"></canvas>
 	<canvas style="border:1px black solid;float:left" id="colors"></canvas>
 	<button id="new_frame">new F</button>
